--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
         h1 {
             font-size: 3.2rem;
             margin-bottom: 8px;
-            background: linear-gradient(90deg, #a1c4fd, #c2e9fb, #fbc2eb);
+            background: linear-gradient(90deg, #AB79D9, #FAB9DA, #EDDD53);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             letter-spacing: 1.5px;
