--- a/main.html
+++ b/main.html
@@ -1,205 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glass Themed New Tab</title>
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>✨ New Tab ✨</title>
+<style>
+    * {
+        box-sizing: border-box;
+    }
 
-        body {
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-family: 'Segoe UI', Arial, sans-serif;
-            background: 
-                linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%),
-                url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1920&q=80')
-                no-repeat center center/cover;
-            color: #fff;
-            animation: fadeIn 1.5s ease-in-out;
-            overflow: hidden;
-        }
+    body {
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        overflow: hidden;
+        font-family: "Poppins", "Segoe UI", sans-serif;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 
-        /* Animated floating bubbles */
-        .bubble {
-            position: absolute;
-            border-radius: 50%;
-            opacity: 0.25;
-            animation: float 12s infinite linear;
-            pointer-events: none;
-        }
-        .bubble1 { width: 120px; height: 120px; left: 10vw; top: 80vh; background: #fff; animation-delay: 0s; }
-        .bubble2 { width: 80px; height: 80px; left: 80vw; top: 90vh; background: #a1c4fd; animation-delay: 2s; }
-        .bubble3 { width: 60px; height: 60px; left: 50vw; top: 100vh; background: #c2e9fb; animation-delay: 4s; }
-        .bubble4 { width: 100px; height: 100px; left: 70vw; top: 85vh; background: #fff; animation-delay: 6s; }
-        .bubble5 { width: 90px; height: 90px; left: 30vw; top: 95vh; background: #a1c4fd; animation-delay: 8s; }
+    /* Background with blur overlay */
+    body::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: url("https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1920&q=80") center/cover no-repeat;
+        filter: blur(14px) brightness(0.7);
+        z-index: -2;
+        transform: scale(1.1);
+        animation: zoomIn 40s ease-in-out infinite alternate;
+    }
 
-        @keyframes float {
-            0% { transform: translateY(0) scale(1); opacity: 0.25; }
-            70% { opacity: 0.35; }
-            100% { transform: translateY(-110vh) scale(1.2); opacity: 0; }
-        }
+    @keyframes zoomIn {
+        from { transform: scale(1.05);}
+        to { transform: scale(1.15);}
+    }
 
-        @keyframes fadeIn {
-            from { opacity: 0; transform: scale(1.02); }
-            to { opacity: 1; transform: scale(1); }
-        }
+    /* floating color overlay */
+    body::after {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: radial-gradient(circle at 20% 30%, rgba(180,90,255,0.15), transparent 60%),
+                    radial-gradient(circle at 80% 70%, rgba(255,150,100,0.18), transparent 60%);
+        animation: floatGlow 12s ease-in-out infinite alternate;
+        z-index: -1;
+    }
 
-        .glass-container {
-            background: rgba(255, 255, 255, 0.18);
-            border-radius: 24px;
-            padding: 54px 80px 40px 80px;
-            text-align: center;
-            backdrop-filter: blur(18px) saturate(180%);
-            -webkit-backdrop-filter: blur(18px) saturate(180%);
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.25);
-            border: 1.5px solid rgba(255, 255, 255, 0.28);
-            transition: transform 0.3s cubic-bezier(.4,2,.6,1);
-            position: relative;
-            z-index: 1;
-        }
+    @keyframes floatGlow {
+        0% { transform: translateY(0px); opacity: 0.8; }
+        100% { transform: translateY(-30px); opacity: 1; }
+    }
 
-        .glass-container:hover {
-            transform: scale(1.025);
-        }
+    /* Navbar glass header */
+    .navbar {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 14px 40px;
+        backdrop-filter: blur(20px) saturate(150%);
+        background: rgba(255, 255, 255, 0.08);
+        border-bottom: 1px solid rgba(255,255,255,0.15);
+        box-shadow: 0 5px 30px rgba(0,0,0,0.25);
+        z-index: 10;
+    }
 
+    .navbar h2 {
+        font-size: 1.1rem;
+        letter-spacing: 0.8px;
+        opacity: 0.85;
+    }
+
+    .clock {
+        font-family: monospace;
+        font-size: 1.2rem;
+        opacity: 0.9;
+    }
+
+    /* Main glass card */
+    .glass {
+        margin-top: 10vh;
+        background: rgba(255, 255, 255, 0.08);
+        border-radius: 24px;
+        padding: 60px 80px;
+        text-align: center;
+        backdrop-filter: blur(25px) saturate(180%);
+        border: 1px solid rgba(255,255,255,0.18);
+        box-shadow: 0 15px 50px rgba(0,0,0,0.4);
+        animation: fadeIn 1.5s ease;
+        transition: transform 0.6s cubic-bezier(.4,2,.6,1);
+    }
+
+    .glass:hover {
+        transform: scale(1.03);
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: scale(0.95);}
+        to { opacity: 1; transform: scale(1);}
+    }
+
+    h1 {
+        font-size: 3rem;
+        margin-bottom: 10px;
+        background: linear-gradient(90deg, #AB79D9, #FAB9DA, #EDDD53);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    .datetime {
+        font-size: 1.1rem;
+        opacity: 0.85;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 1.1rem;
+        opacity: 0.9;
+        margin-bottom: 28px;
+    }
+
+    .search-box {
+        width: 380px;
+        padding: 14px 20px;
+        border-radius: 12px;
+        border: none;
+        outline: none;
+        background: rgba(255,255,255,0.12);
+        color: #fff;
+        font-size: 1.05rem;
+        transition: 0.3s ease;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+    }
+
+    .search-box::placeholder {
+        color: rgba(255,255,255,0.7);
+    }
+
+    .search-box:focus {
+        background: rgba(0,0,0,0.3);
+        transform: scale(1.05);
+    }
+
+    .links {
+        display: flex;
+        justify-content: center;
+        gap: 24px;
+        margin-top: 32px;
+        flex-wrap: wrap;
+    }
+
+    .link {
+        background: rgba(255,255,255,0.1);
+        border: 1px solid rgba(255,255,255,0.15);
+        border-radius: 14px;
+        padding: 12px 18px;
+        color: #fff;
+        text-decoration: none;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        transition: 0.25s ease;
+        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+
+    .link:hover {
+        background: rgba(255,255,255,0.25);
+        transform: translateY(-3px) scale(1.05);
+        box-shadow: 0 6px 25px rgba(0,0,0,0.25);
+    }
+
+    .link img {
+        width: 20px;
+        height: 20px;
+        filter: brightness(0) invert(1);
+    }
+
+    @media (max-width: 600px) {
+        .glass {
+            width: 90%;
+            padding: 40px 24px;
+        }
         h1 {
-            font-size: 3.2rem;
-            margin-bottom: 8px;
-            background: linear-gradient(90deg, #AB79D9, #FAB9DA, #EDDD53);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            letter-spacing: 1.5px;
-            animation: popIn 1s cubic-bezier(.4,2,.6,1);
+            font-size: 2.2rem;
         }
-
-        @keyframes popIn {
-            0% { opacity: 0; transform: scale(0.95);}
-            100% { opacity: 1; transform: scale(1);}
-        }
-
-        .date-time {
-            font-size: 1.1rem;
-            color: #fff;
-            opacity: 0.8;
-            margin-bottom: 18px;
-            letter-spacing: 0.5px;
-            animation: fadeIn 1.5s 0.5s backwards;
-        }
-
-        p {
-            font-size: 1.18rem;
-            opacity: 0.92;
-            margin-bottom: 32px;
-            animation: fadeIn 1.5s 0.7s backwards;
-        }
-
         .search-box {
-            background: rgba(255,255,255,0.28);
-            border: none;
-            border-radius: 12px;
-            padding: 14px 22px;
-            width: 340px;
-            font-size: 1.08rem;
-            outline: none;
-            color: #fff;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.13);
-            transition: all 0.3s cubic-bezier(.4,2,.6,1);
-            margin-bottom: 10px;
+            width: 100%;
         }
-
-        .search-box::placeholder {
-            color: rgba(255,255,255,0.7);
-        }
-
-        .search-box:focus {
-            background: rgba(255,255,255,0.4);
-            transform: scale(1.04);
-        }
-
         .links {
-            display: flex;
-            justify-content: center;
-            gap: 22px;
-            flex-wrap: wrap;
-            margin-top: 22px;
-            animation: fadeIn 1.5s 1s backwards;
+            gap: 16px;
         }
-
-        .links a {
-            background: rgba(255,255,255,0.23);
-            padding: 13px 26px;
-            border-radius: 10px;
-            color: #222;
-            text-decoration: none;
-            font-weight: 500;
-            letter-spacing: 0.5px;
-            transition: all 0.22s cubic-bezier(.4,2,.6,1);
-            backdrop-filter: blur(10px);
-            box-shadow: 0 1px 8px rgba(31,38,135,0.08);
-            font-size: 1.08rem;
-            border: 1px solid rgba(255,255,255,0.13);
-        }
-
-        .links a:hover {
-            background: rgba(255,255,255,0.45);
-            color: #0078d7;
-            transform: translateY(-4px) scale(1.06);
-            box-shadow: 0 4px 16px rgba(0,0,0,0.18);
-        }
-
-        @media (max-width: 600px) {
-            .glass-container {
-                padding: 28px 8vw 24px 8vw;
-            }
-            .search-box {
-                width: 90vw;
-                min-width: 0;
-            }
-            h1 {
-                font-size: 2.1rem;
-            }
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
-    <div class="bubble bubble1"></div>
-    <div class="bubble bubble2"></div>
-    <div class="bubble bubble3"></div>
-    <div class="bubble bubble4"></div>
-    <div class="bubble bubble5"></div>
-    <div class="glass-container">
-        <h1>✨ xX2o19Nil_EtohBoomsunaXx's New Tab ✨</h1>
-        <div class="date-time" id="datetime"></div>
-        <p>uhmm search up smth ig.. yeah</p>
+    <div class="navbar">
+        <h2>🌫️ Glass Horizon</h2>
+        <div class="clock" id="clock">--:--:--</div>
+    </div>
+
+    <div class="glass">
+        <h1>✨ xX2o19Nil_EtohBoomsunaXx ✨</h1>
+        <div class="datetime" id="datetime"></div>
+        <p>Type something and let the vibes cook 🍳</p>
+
         <form action="https://www.google.com/search" method="get" target="_blank" autocomplete="off">
-            <input class="search-box" type="text" name="q" placeholder="Search Google..." autofocus>
+            <input type="text" name="q" class="search-box" placeholder="Search Google..." autofocus>
         </form>
+
         <div class="links">
-            <a href="https://www.github.com" target="_blank">GitHub!11</a>
-            <a href="https://www.youtube.com" target="_blank">YouTube</a>
-            <a href="https://www.knowledgehook.com" target="_blank">knowledgehook</a>
-            <a href="https://www.gmail.com" target="_blank">Gee Gamil</a>
-            <a href="https://www.wikipedia.org" target="_blank">Wikipedia</a>
+            <a href="https://github.com" class="link" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub"> GitHub
+            </a>
+            <a href="https://youtube.com" class="link" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"> YouTube
+            </a>
+            <a href="https://knowledgehook.com" class="link" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/googleclassroom.svg" alt="KH"> Knowledgehook
+            </a>
+            <a href="https://gmail.com" class="link" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" alt="Gmail"> Gmail
+            </a>
+            <a href="https://wikipedia.org" class="link" target="_blank">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/wikipedia.svg" alt="Wiki"> Wikipedia
+            </a>
         </div>
     </div>
+
     <script>
-        // Live date and time
-        function updateDateTime() {
+        function updateClock() {
             const now = new Date();
-            const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+            const time = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit', second: '2-digit' });
+            document.getElementById('clock').textContent = time;
+
+            const options = { weekday: 'long', month: 'long', day: 'numeric', year: 'numeric' };
             const date = now.toLocaleDateString(undefined, options);
-            const time = now.toLocaleTimeString(undefined, { hour: '2-digit', minute: '2-digit' });
-            document.getElementById('datetime').textContent = `${date} — ${time}`;
+            document.getElementById('datetime').textContent = date;
         }
-        updateDateTime();
-        setInterval(updateDateTime, 1000);
+        setInterval(updateClock, 1000);
+        updateClock();
     </script>
 </body>
 </html>
