--- a/main.html
+++ b/main.html
@@ -85,10 +85,10 @@
 
     /* Main glass card */
     .glass {
-        margin-top: 10vh;
+        margin-top: 6vh;
         background: rgba(255, 255, 255, 0.08);
         border-radius: 24px;
-        padding: 60px 80px;
+        padding: 80px 80px;
         text-align: center;
         backdrop-filter: blur(25px) saturate(180%);
         border: 1px solid rgba(255,255,255,0.18);
@@ -202,14 +202,14 @@
 </head>
 <body>
     <div class="navbar">
-        <h2>🌫️ Glass Horizon</h2>
+        <h2>✨ xX2o19Nil_EtohBoomsunaXx's Freaktab versionee 1.07 ✨</h2>
         <div class="clock" id="clock">--:--:--</div>
     </div>
 
     <div class="glass">
         <h1>✨ xX2o19Nil_EtohBoomsunaXx ✨</h1>
         <div class="datetime" id="datetime"></div>
-        <p>Type something and let the vibes cook 🍳</p>
+        <p>uhmm.. search up smth. ig</p>
 
         <form action="https://www.google.com/search" method="get" target="_blank" autocomplete="off">
             <input type="text" name="q" class="search-box" placeholder="Search Google..." autofocus>
@@ -217,16 +217,16 @@
 
         <div class="links">
             <a href="https://github.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub"> GitHub
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub"> Gitbub!11
             </a>
             <a href="https://youtube.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"> YouTube
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"> Yub Tub
             </a>
             <a href="https://knowledgehook.com" class="link" target="_blank">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/googleclassroom.svg" alt="KH"> Knowledgehook
             </a>
             <a href="https://gmail.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" alt="Gmail"> Gmail
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" alt="Gmail"> Gee Gamil
             </a>
             <a href="https://wikipedia.org" class="link" target="_blank">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/wikipedia.svg" alt="Wiki"> Wikipedia
