--- a/main.html
+++ b/main.html
@@ -207,9 +207,9 @@
     </div>
 
     <div class="glass">
-        <h1>✨ xX2o19Nil_EtohBoomsunaXx ✨</h1>
+        <h1>BoomsunaLover221's NEw tab !!/h1>
         <div class="datetime" id="datetime"></div>
-        <p>uhmm.. search up smth. ig</p>
+        <p>search up smth !! (or else) </p>
 
         <form action="https://www.google.com/search" method="get" target="_blank" autocomplete="off">
             <input type="text" name="q" class="search-box" placeholder="Search Google..." autofocus>
