--- a/main.html
+++ b/main.html
@@ -207,7 +207,7 @@
     </div>
 
     <div class="glass">
-        <h1>BoomsunaLover221's NEw tab !!/h1>
+        <h1>BoomsunaLover221's NEw tab !! <h1>
         <div class="datetime" id="datetime"></div>
         <p>search up smth !! (or else) </p>
 
